WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286909
WebGL: multiDrawBuffers, blitFramebuffer does not prepare for drawing buffer write
https://bugs.webkit.org/show_bug.cgi?id=286909
Summary
WebGL: multiDrawBuffers, blitFramebuffer does not prepare for drawing buffer ...
Kimmo Kinnunen
Reported
2025-02-03 02:00:25 PST
multiDrawBuffers, blitFramebuffer does not prepare for draw Missing from commit
289054@main
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-03 02:00:37 PST
<
rdar://problem/144075740
>
Kimmo Kinnunen
Comment 2
2025-02-03 02:02:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39899
EWS
Comment 3
2025-02-03 23:14:28 PST
Committed
289770@main
(118b99e6716f): <
https://commits.webkit.org/289770@main
> Reviewed commits have been landed. Closing PR #39899 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug